# Minesweeper

./: CMakeLists.txt  README.md  index.html
backend/: Board.cpp  Board.h  Game.cpp  Game.h  SaveManager.cpp  SaveManager.h
css/: styles.css
frontend/: app.js  index.html  style.css
js/: board.js  cell.js  game.js  main.js  ui.js
